answer check pattern changed
