# controllers/question.controller.js
@@ -17,7 +17,7 @@ router
         }
         if (data.length > 0) {
           const newQ = data.map(function (obj, index) {
-            obj.qid = index + 1;
+            obj._id = undefined;
             obj.correct_answer_index = undefined;
             obj.__v = undefined;
             return obj;
@@ -31,95 +31,50 @@ router
       });
   })
   .post((req, res, next) => {
-    const newQuestion = new QuestionModel({});
-    newQuestion.title = req.body.title;
-    newQuestion.answers = req.body.answers;
-    newQuestion.correct_answer_index = req.body.correct_answer_index;
-    newQuestion.save(function (err, done) {
-      if (err) {
-        err.msg = "Error While Saving Question";
-        return next(err);
-      }
-      res.json({
-        msg: "Question Saved Sucessfully",
-        qinfo: done,
+    QuestionModel.find({})
+      .then((question) => {
+        //console.log(question.length);
+        const newQuestion = new QuestionModel({});
+        newQuestion.title = req.body.title;
+        newQuestion.qid = question.length + 1;
+        newQuestion.answers = req.body.answers;
+        newQuestion.correct_answer_index = req.body.correct_answer_index;
+        newQuestion.save(function (err, done) {
+          if (err) {
+            err.msg = "Error While Saving Question";
+            return next(err);
+          }
+          res.json({
+            msg: "Question Saved Sucessfully",
+            qinfo: done,
+          });
+        });
+      })
+      .catch((e) => {
+        console.log(e);
       });
-    });
   })
   .put((req, res, next) => {})
   .delete((req, res, next) => {});
 
 router
-  .route("/checkAnswer/:id")
-  .get((req, res, next) => {})
-  .post((req, res, next) => {
-    console.log(req.params.id);
-    QuestionModel.findOne({ _id: new dbConfig.oid(req.params.id) })
+  .route("/checkAnswer/:qid/:answer")
+  .get((req, res, next) => {
+    // console.log(req.params.qid);
+    // console.log(req.params.answer);
+
+    QuestionModel.findOne({ qid: req.params.qid })
       .then((question) => {
         // console.log(question);
         if (question) {
           //console.log("sfsq" + question);
-          if (question.correct_answer_index === req.body.answerSelectedByUser) {
-            userId = req.body.userId;
-            UserModel.findOne(
-              { _id: userId },
-              {
-                _id: 1,
-                name: 1,
-              }
-            )
-              .lean()
-              .exec((err, userinfo) => {
-                if (err) {
-                  return next(err);
-                } else {
-                  if (!userinfo) {
-                    return next({
-                      msg: "User Doesnot exist in our system",
-                    });
-                  }
-                  userinfo.userId = userinfo._id;
-                  //  console.log(userinfo);
-                  ScoreboardModel.findOne({
-                    "person.userId": userinfo.userId,
-                  }).then((result) => {
-                    if (result == null) {
-                      const newScoreboard = new ScoreboardModel({});
-                      newScoreboard.person = userinfo;
-                      newScoreboard.points = 5;
-                      newScoreboard.save(function (errr, done) {
-                        if (errr) {
-                          errr.msg = "Error While Saving Scoreboard";
-                          return next(errr);
-                        }
-                        res.json({
-                          msg: "Selected answer matched",
-                          info: done,
-                        });
-                      });
-                    } else {
-                      result.person = userinfo;
-                      result.points = result.points + 5;
-                      result.save(function (err, done) {
-                        if (err) {
-                          errr.msg = "Error While Saving Scoreboard";
-                          return next(err);
-                        }
-                        res.json({
-                          msg: "Selected answer matched",
-                          info: done,
-                        });
-                      });
-                    }
-                  });
-                }
-              });
-            // res.status(200).json({
-            //   msg: "Selected answer matched",
-            // });
+          if (question.correct_answer_index === req.params.answer) {
+            res.status(200).json({
+              msg: "Correct Answer",
+            });
           } else {
-            return next({
-              msg: "Selected answer didnot matched",
+            res.status(200).json({
+              msg: "Wrong Answer",
             });
           }
         } else {
@@ -135,7 +90,97 @@ router
         next(err);
       });
   })
+  .post((req, res, next) => {})
   .put((req, res, next) => {})
   .delete((req, res, next) => {});
+
+// router
+//   .route("/checkAnswer/:id")
+//   .get((req, res, next) => {
+//     console.log(req.params.id);
+//     QuestionModel.findOne({ _id: new dbConfig.oid(req.params.id) })
+//       .then((question) => {
+//         // console.log(question);
+//         if (question) {
+//           //console.log("sfsq" + question);
+//           if (question.correct_answer_index === req.body.answerSelectedByUser) {
+//             userId = req.body.userId;
+//             UserModel.findOne(
+//               { _id: userId },
+//               {
+//                 _id: 1,
+//                 name: 1,
+//               }
+//             )
+//               .lean()
+//               .exec((err, userinfo) => {
+//                 if (err) {
+//                   return next(err);
+//                 } else {
+//                   if (!userinfo) {
+//                     return next({
+//                       msg: "User Doesnot exist in our system",
+//                     });
+//                   }
+//                   userinfo.userId = userinfo._id;
+//                   //  console.log(userinfo);
+//                   ScoreboardModel.findOne({
+//                     "person.userId": userinfo.userId,
+//                   }).then((result) => {
+//                     if (result == null) {
+//                       const newScoreboard = new ScoreboardModel({});
+//                       newScoreboard.person = userinfo;
+//                       newScoreboard.points = 5;
+//                       newScoreboard.save(function (errr, done) {
+//                         if (errr) {
+//                           errr.msg = "Error While Saving Scoreboard";
+//                           return next(errr);
+//                         }
+//                         res.json({
+//                           msg: "Selected answer matched",
+//                           info: done,
+//                         });
+//                       });
+//                     } else {
+//                       result.person = userinfo;
+//                       result.points = result.points + 5;
+//                       result.save(function (err, done) {
+//                         if (err) {
+//                           errr.msg = "Error While Saving Scoreboard";
+//                           return next(err);
+//                         }
+//                         res.json({
+//                           msg: "Selected answer matched",
+//                           info: done,
+//                         });
+//                       });
+//                     }
+//                   });
+//                 }
+//               });
+//             // res.status(200).json({
+//             //   msg: "Selected answer matched",
+//             // });
+//           } else {
+//             return next({
+//               msg: "Selected answer didnot matched",
+//             });
+//           }
+//         } else {
+//           // console.log("sefcnj");
+//           return next({
+//             msg: "Question not found",
+//           });
+//         }
+//       })
+//       .catch((err) => {
+//         // console.log("wrrorrrrrrrrrrrrrrrrrrrrrrrrrrrr");
+//         console.log(err);
+//         next(err);
+//       });
+//   })
+//   .post((req, res, next) => {})
+//   .put((req, res, next) => {})
+//   .delete((req, res, next) => {});
 
 module.exports = router;
